--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Jimams"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11, <3.12"
+python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
 streamlit = "^1.27.2"
 scikit-learn = "^1.3.1"
 torch = {version = "^2.1.0+cpu", source = "pytorch"}
@@ -17,6 +17,10 @@ torchvision = {version = "^0.16.0+cpu", source = "pytorch"}
 name = "pytorch"
 url = "https://download.pytorch.org/whl/cpu"
 priority = "explicit"
+
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.25.2"
 
 [build-system]
 requires = ["poetry-core"]
